# oldpaper

./: Cargo.toml  Dockerfile  README.md  docker-compose.yml
sql/: init.sql
src/: api.rs  handler.rs  handlers.rs  main.rs  model.rs  models.rs  routes.rs
